--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-{% autoescape true %}
+{% autoescape false %}
 <html>
   <head>
     <meta charset="utf-8">
-    <title>XSS Demo</title>
+    <title>Comments Demo</title>
     <link rel="stylesheet" href="/static/style.css">
   </head>
 
@@ -11,7 +11,7 @@
 
     <!-- Header -->
     <header>
-      <h1>XSS Demo</h1>
+      <h1>Comments Demo</h1>
       <p>Read, search and post comments</p>
     </header>
 
@@ -30,7 +30,7 @@
     {% endif %}
 
     {% for comment in comments %}
-      <div>
+      <div title={{comment}}>
         <p>{{ comment }}</p>
       </div>
     {% endfor %}
